# velora

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ARCHITECTURE.md  PLUGIN_DEV_GUIDE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/velora-core/: Cargo.toml
src-tauri/crates/velora-core/src/: capability.rs  command.rs  context.rs  error.rs  event.rs  host.rs  lib.rs  manifest.rs  module.rs  registry.rs
src-tauri/crates/velora-infra/: Cargo.toml
src-tauri/crates/velora-infra/src/: lib.rs
src-tauri/crates/velora-modules/: Cargo.toml
src-tauri/crates/velora-modules/src/: lib.rs
src-tauri/src/: lib.rs
src-tauri/src/modules/: excel.rs  mod.rs  qrcode.rs  registry.rs
src-tauri/src/plugins_ext/: mod.rs
src/components/layout/: app-shell.tsx  top-bar.tsx
src/components/module/: module-header.tsx
src/components/nav/: nav-rail.tsx
src/components/palette/: command-palette.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  tooltip.tsx
src/hooks/: use-theme.ts
src/lib/: registry.ts  spacing.ts
src/routes/: coming-soon-page.tsx  excel-to-json-page.tsx  home-page.tsx  not-found-page.tsx  preferences-page.tsx  qrcode-page.tsx
src/store/: app-store.ts  plugin-store.ts
