[workspace]
members = ["crates/velora-core", "crates/velora-infra", "crates/velora-modules"]
resolver = "2"

[package]
name = "velora"
version = "0.1.0"
description = "Velora - a sleek, extensible desktop toolkit"
authors = ["lemostic"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "velora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Workspace members — the new plugin architecture
velora-core    = { path = "crates/velora-core" }
velora-infra   = { path = "crates/velora-infra" }
velora-modules = { path = "crates/velora-modules" }

# Business crates still living in the root (will move to
# velora-modules in P2)
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
calamine = "0.26"
base64 = "0.22"

