[package]
name = "velora-core"
version = "0.1.0"
edition = "2021"
description = "Core traits and types for the Velora plugin system"

[lib]
name = "velora_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
inventory = "0.3"
